--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,17 @@
       type="text/css"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//db.onlinewebfonts.com/c/bf9f5d50c1b928ff21436517a1a95ad9?family=Proxima+Nova"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="http://fonts.cdnfonts.com/css/gilroy-bold"
+    />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
